# OpenMeteo

./: .gitignore  README.md  pyproject.toml
geocoding/: __init__.py  request.py
historic/: __init__.py  request.py
scripts/: geocoding.py  historic.py
