[project]
name = "openmeteo"
version = "0.1.0"
description = "Exploration of the OpenMeteo APIs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openmeteo-requests>=1.5.0",
]

[project.scripts]
geocode = "scripts.geocoding:main"

[dependency-groups]
dev = [
    "poethepoet>=0.36.0",
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]

[tool.poe.tasks]
_imports = "ruff check --select I --fix ."
_format = "ruff format ."
format.sequence = ["_imports", "_format"]

_type = "ty check ."
_check = "ruff check ."
lint.sequence = ["_type", "_check"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "geocoding/",
]
